--- a/wiki/JouleUnit.wiki
+++ b/wiki/JouleUnit.wiki
@@ -1,1 +1,1 @@
-JouleUnit is an energy testing framework for Java applications. It extends the testing capabilities of JUnit with further profiling support for battery sensors of several electronic devices including Laptops, Android smart phones and Nao humanoid robots. Besides profiling it allows defining energy consumption assertions to ensure maximum and average consumption of profiled workloads as well as capabilities for energy regression testing.
+JouleUnit is an energy profiling and testing framework for profiling ICT applications. It reuses the workload definition and execution capabilities of JUnit to define workloads to be profiled on a respective ICT device under test (e.g., and Android-operated mobile device, a Linux-operated PC or a humanoid NAO robot).
