--- a/wiki/JouleUnitWorkbench.wiki
+++ b/wiki/JouleUnitWorkbench.wiki
@@ -16,6 +16,8 @@ To check out the JouleUnit plugins you will require an SVN client, e.g., Subvers
 
   * Once you have an SVN client running, check the Eclipse plugin projects located at https://jouleunit.googlecode.com/svn/trunk/workbench/plugins and import them into your Eclipse workspace.
 
-  * Select one of the plugin projects in the workspace, open the context menu with a secondary mouse click and select _Run As ... -> Eclipse Application_
+  * Select one of the plugin projects in the workspace, open the context menu with a secondary mouse click and select _Run As -> Eclipse Application_
+
+  * Alternatively you can export the plugin projects as JARs into the dropins folder of your Eclipse distribution and restart your Eclipse instance.
 
 = To be continued ... =
