--- a/wiki/JouleUnitWorkbench.wiki
+++ b/wiki/JouleUnitWorkbench.wiki
@@ -1,15 +1,17 @@
 #summary Overview on how to use the Eclipse-based JouleUnit workbench.
 
+<wiki:toc max_depth="2" />
+
 = Introduction =
 The JouleUnit workbench is Eclipse-based additional tooling for the JouleUnit framework, especially for the visualization of JouleUnit profiling and testing results.
 
 This documentation explains how to install and use the JouleUnit workbench and the provided examples.
 
-== Installation ==
+= Installation =
 To run the JouleUnit Workbench, Eclipse is required. If you do not have an Eclipse instance ready to use yet, download Eclipse from http://eclipse.org/
 We recommend to use the Modeling Tools Edition, but feel free to use another Eclipse version instead.
 
-=== Running the JouleUnit Workbench from the SVN ===
+== Running the JouleUnit Workbench from the SVN ==
 Currently, not JouleUnit Update site exist, yet. Therefore, you have to check out the JouleUnit plugins from the SVN and run them in a Runtime Eclipse instance or to build your own deployable plugin JARs for your Eclipse instance.
 
 To check out the JouleUnit plugins you will require an SVN client, e.g., Subversive (http://www.eclipse.org/subversive/).
@@ -20,9 +22,25 @@ To check out the JouleUnit plugins you will require an SVN client, e.g., Subvers
 
   * Alternatively you can export the plugin projects as JARs into the dropins folder of your Eclipse distribution and restart your Eclipse instance.
 
-== Using the JouleUnit Workbench ==
+= Using the JouleUnit Workbench =
 Your runtime Eclipse or restarted Eclipse instance should now contain a new perspective called JouleUnit. 
 
   * You can open the JouleUnit perspective by the menu option _Window -> Open Perspective -> Other ... -> JouleUnit_
 
-= To be continued ... =
+  * Your Eclispe instance should now look as shown in the screenshot below:
+
+http://jouleunit.googlecode.com/svn/trunk/images/perspective.png
+
+  * At the left hand side you have the project explorer, to manage your JouleUnit projects.
+
+  * At the center, you have the _Test Run Details_ view, the _Test Run Results_ view, and the _Console_ view
+
+  * The _Test Run Details_ view allows to graphically illustrate a single test of a test run or a sequence of tests within a test run.
+
+  * The _Test Run Results_ view gives an overview over all test runs of the last executed test run.
+
+  * The _Console_ view documents currently executed test runs and their progress.
+
+= JouleUnit Examples =
+
+To be continued
