--- a/wiki/JouleUnitWorkbench.wiki
+++ b/wiki/JouleUnitWorkbench.wiki
@@ -25,7 +25,10 @@ To check out the JouleUnit plugins you will require an SVN client, e.g., Subvers
 
   * Once you have an SVN client running, check the Eclipse plugin projects located at https://jouleunit.googlecode.com/svn/trunk/workbench/plugins and import them into your Eclipse workspace.
 
-  * Please note that the plugins org.qualitune.jouleunit.android.testrun, org.qualitune.jouleunit.android.testrun.resource, org.qualitune.jouleunit.android.testrun.resource.ui, and org.emftext.commons.antlr3_4_0 are only required when JouleUnit shall be used for the profiling of Android applications.
+  * Please note that the following plugins are only required when JouleUnit shall be used for the profiling of Android applications:
+    * org.qualitune.jouleunit.android.testrun,
+    * org.qualitune.jouleunit.android.testrun.resource, and
+    * org.qualitune.jouleunit.android.testrun.resource.ui 
 
   * Select one of the plugin projects in the workspace, open the context menu with a secondary mouse click and select _Run As -> Eclipse Application_
 
