Edited wiki page JouleUnitWorkbench through web user interface.

--- a/wiki/JouleUnitWorkbench.wiki
+++ b/wiki/JouleUnitWorkbench.wiki
@@ -54,5 +54,8 @@ http://jouleunit.googlecode.com/svn/trunk/images/perspective.png
   * The _Console_ view documents currently executed test runs and their progress.
 
 = Joule Unit Examples =
+Select one of the following examples to get further used to the JouleUnit Workbench:
+
+  * AndroidExample (a hello world example showing how to energy profile Android applications).
 
 To be continued
