--- a/wiki/AndroidExample.wiki
+++ b/wiki/AndroidExample.wiki
@@ -6,4 +6,6 @@
 
 This example shows how to energy profile an Android hello world application by using JouleUnit and the JouleUnitWorkbench. We assume that you installed the JouleUnitWorkbench already. Otherwise check the respective [http://code.google.com/p/jouleunit/wiki/JouleUnitWorkbench wiki page] for further details.
 
+  * Please also note that you installed all plugins necessary for the Android extensions of the JouleUnit Workbench as mentioned on the respective [http://code.google.com/p/jouleunit/wiki/JouleUnitWorkbench wiki page].
+
 == To be continued ==
