Edited wiki page AndroidExample through web user interface.

--- a/wiki/AndroidExample.wiki
+++ b/wiki/AndroidExample.wiki
@@ -14,4 +14,10 @@ This example consists of two Eclispe projects, located within the JouleUnit SVN.
   * helloworld
   * helloworldtest
 
+Afterwards, the _Project Explorer_ should look as follows:
+
+TODO Screenshot
+
+The first project, _helloworld_ contains an example Android application simply displaying a _Hello World_ message once started on an Android device. If you are new to Android development, you can run the tutorial available at http://developer.android.com/training/basics/firstapp/creating-project.html to get further information about Android applications and how to run them on mobile devices.
+
 == To be continued ==
