--- a/wiki/AndroidExample.wiki
+++ b/wiki/AndroidExample.wiki
@@ -16,12 +16,16 @@ This example consists of two Eclispe projects, located within the JouleUnit SVN.
 
 Afterwards, the _Project Explorer_ should look as follows:
 
-TODO Screenshot
+  * TODO Screenshot
 
 The first project, _helloworld_ contains an example Android application simply displaying a _Hello World_ message once started on an Android device. If you are new to Android development, you can run the tutorial available at http://developer.android.com/training/basics/firstapp/creating-project.html to get further information about Android applications and how to run them on mobile devices.
 
-The second project _helloworldtest_ contains a simple JUnit test suite consisting of one test case. The JUnit test suite is contained in the _src_ directory and called TODO.
+The second project _helloworldtest_ contains a simple JUnit test suite consisting of one test case. The JUnit test suite is contained in the _src_ directory and called TODO. If you want to learn more about JUnit testing of Android, please have a look at http://developer.android.com/tools/testing/testing_eclipse.html
 
-TODO Screenshot of JUnit test.
+  * TODO Screenshot of JUnit test.
+
+  * TODO Explain test cases. The test case TODO will open the hello world application and will simply wait for ten seconds.
+
+  * To run the test suite as a normal JUnit test, select _TODO_ in the context menu. Afterwards, the test suite should be deployed on your Android device and being executed.
 
 == To be continued ==
