--- a/wiki/AndroidExample.wiki
+++ b/wiki/AndroidExample.wiki
@@ -16,11 +16,11 @@ This example consists of two Eclispe projects, located within the JouleUnit SVN.
 
 Afterwards, the _Project Explorer_ should look as follows:
 
-  * TODO Screenshot
+http://jouleunit.googlecode.com/svn/trunk/images/projectexplorer.png
 
 The first project, _helloworld_ contains an example Android application simply displaying a _Hello World_ message once started on an Android device. If you are new to Android development, you can run the tutorial available at http://developer.android.com/training/basics/firstapp/creating-project.html to get further information about Android applications and how to run them on mobile devices.
 
-The second project _helloworldtest_ contains a simple JUnit test suite consisting of one test case. The JUnit test suite is contained in the _src_ directory and called TODO. If you want to learn more about JUnit testing of Android, please have a look at http://developer.android.com/tools/testing/testing_eclipse.html
+The second project _helloworldtest_ contains a simple JUnit test suite consisting of one test case. The JUnit test suite is contained in the _src_ directory and called _org.jouleunit.helloworld.test.HelloWorldTest_. If you want to learn more about JUnit testing of Android, please have a look at http://developer.android.com/tools/testing/testing_eclipse.html
 
   * TODO Screenshot of JUnit test.
 
