--- a/wiki/AndroidExample.wiki
+++ b/wiki/AndroidExample.wiki
@@ -42,14 +42,23 @@ Thus, within the _helloworldtest_ project, the _helloworld.testrun_ file exist t
 http://jouleunit.googlecode.com/svn/trunk/images/testrun.png
 
   * First, a name of the test run (here _ExampleWallpaper_) is given
+
   * Following, the relative path to the compiled application (apk) file that shall be profiled is given, together with the package id of the respective Android application (here _org.jouleunit.helloworld_, the package id is configured within the manifest file of the respective Android project).
+
   * Similarly, next, the relative path to the compiled JUnit test suite and its package id are given.
+
   * The parameter _hardwareProfiling_ configures whether or not to profile further hardware information together with energy consumption (currently, the profiling of CPU utilization, WiFi traffic and display brightness are supported).
+
   * The parameter _run_ configures whether to run the test cases on a local device or on a remote tesing server (not yet being publicly available).
+
   * Afterwards, the test cases being part of the test run are configured, which, in this case is only the _testIdle_ test case, identified by the canonical class and method name.
 
-To trigger the test run, select the file in the project explorer and select the context menu option _Run As -> testrun application_
+=== Running the TestRun ===
+  * To trigger the test run, select the file in the project explorer and select the context menu option _Run As -> testrun application_
 
+  * On the Android console within the _Console_ view you should see the progress of the test run.
+
+  * Hint, if the Android console shows the message _Error: DebugBridge is not initialized. TestRun cancelled._, simply try to rerun the testrun.
 
 
 To be continued.
