Edited wiki page AndroidExampleScreencast through web user interface.

--- a/wiki/AndroidExampleScreencast.wiki
+++ b/wiki/AndroidExampleScreencast.wiki
@@ -2,4 +2,4 @@
 
 = Screencast =
 
-This screencast illustrates the usage of JouleUnit for an Android example together with a remote profiling service. [http://jouleunit.googlecode.com/svn/trunk/workbench/screencast/qmark.swf To show the screencast, click on this link.]
+This screencast illustrates the usage of JouleUnit for an Android example together with a remote profiling service. [http://jouleunit.googlecode.com/svn/trunk/workbench/screencast/qmark.html To show the screencast, click on this link.]
